kubernetes/apps/pudim.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pudim
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pudim
  namespace: pudim
  labels:
    k8s-app: pudim
spec:
  replicas: 3
  selector:
    matchLabels:
      k8s-app: pudim
  template:
    metadata:
      labels:
        k8s-app: pudim
        name: pudim
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - image: msfidelis/pudim:v0
        name: pudim
        ports:
        - name: http
          containerPort: 8080
        resources:
          requests:
            cpu: "256m"
            memory: "512m"
---
kind: Service
apiVersion: v1
metadata:
  name: pudim
  namespace: pudim
spec:
  selector:
    k8s-app: pudim
  ports:
    - protocol: TCP
      port: 80
      name: web
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: pudim
  annotations:
    kubernetes.io/ingress.class: traefik
  spec:
    rules:
    - host: pudim.raj.ninja
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
            service: 
              name: pudim
              port:
                number: 80
